; ModuleID = '/home/carl/AnghaBench/mpv/video/out/extr_vo_gpu.c_get_image.c'
source_filename = "/home/carl/AnghaBench/mpv/video/out/extr_vo_gpu.c_get_image.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mp_image = type { i32 }
%struct.vo = type { %struct.gpu_priv* }
%struct.gpu_priv = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.mp_image* (%struct.vo*, i32, i32, i32, i32)* @get_image to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.mp_image* @get_image(%struct.vo* %0, i32 %1, i32 %2, i32 %3, i32 %4) #0 {
  %6 = alloca %struct.vo*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca %struct.gpu_priv*, align 8
  store %struct.vo* %0, %struct.vo** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  %12 = load %struct.vo*, %struct.vo** %6, align 8
  %13 = getelementptr inbounds %struct.vo, %struct.vo* %12, i32 0, i32 0
  %14 = load %struct.gpu_priv*, %struct.gpu_priv** %13, align 8
  store %struct.gpu_priv* %14, %struct.gpu_priv** %11, align 8
  %15 = load %struct.gpu_priv*, %struct.gpu_priv** %11, align 8
  %16 = getelementptr inbounds %struct.gpu_priv, %struct.gpu_priv* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = load i32, i32* %7, align 4
  %19 = load i32, i32* %8, align 4
  %20 = load i32, i32* %9, align 4
  %21 = load i32, i32* %10, align 4
  %22 = call %struct.mp_image* @gl_video_get_image(i32 %17, i32 %18, i32 %19, i32 %20, i32 %21)
  ret %struct.mp_image* %22
}

declare dso_local %struct.mp_image* @gl_video_get_image(i32, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
